--- a/web.html
+++ b/web.html
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-        <h1>Personal Information</h1>
+        <h1 class="headerTitle">Personal Information</h1>
         <nav>
             <ul class="navigs">
                 <li><a href="web.html">Home</a></li>
@@ -21,7 +21,7 @@
     </header>
     <main>
         <header>
-            <h1 class="bodyTitle">Details about Hulisani Innocent Netshaulu</h1>
+            <h1 class="mainTitle">Details about Hulisani Innocent Netshaulu</h1>
         </header>
         <section>
             <h2>Introduction</h2>
