--- a/web.html
+++ b/web.html
@@ -56,6 +56,10 @@
                 </ul>
                 </b>
             </p>
+            <p>contact me:</p><br>
+            <p>Email: businessnetshaulu@gmail.com</p>
+            <p>Phone1: +27 76 612 7732 </p>
+            <p>Phone2: +27 62 421 0037</p>
         </section>
     </main>
     <footer>
